k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheckservice
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: healthcheckservice
