k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcheckservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/otusapp/frontez/(.*) /health break;
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: healthcheckservice
            port:
              number: 80
      - path: /otusapp/frontez
        pathType: Prefix
        backend:
          service:
            name: healthcheckservice
            port:
              number: 80
